--- a/src/learning/swing/layout/cardlayout/cards/PanelOne.form
+++ b/src/learning/swing/layout/cardlayout/cards/PanelOne.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="learning.swing.layout.cardlayout.PanelThree">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="learning.swing.layout.cardlayout.cards.PanelOne">
   <grid id="27dc6" binding="panel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -7,13 +7,13 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="9c35d" class="javax.swing.JLabel">
+      <component id="2e007" class="javax.swing.JLabel">
         <constraints border-constraint="Center"/>
         <properties>
           <font size="72"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
-          <text value="THREE"/>
+          <text value="ONE"/>
         </properties>
       </component>
     </children>
