--- a/src/learning/swing/layout/cardlayout/cards/PanelTwo.form
+++ b/src/learning/swing/layout/cardlayout/cards/PanelTwo.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="learning.swing.layout.cardlayout.PanelTwo">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="learning.swing.layout.cardlayout.cards.PanelTwo">
   <grid id="27dc6" binding="panel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
